# core

./: .gitignore  HOW_TO.md  README.md  SECURITY.md  WHITE_PAPER.md
.github/workflows/: client-lib-tests.yml  example-app-test.yml  openmls-lockfile-check.yml
ambient/: Cargo.toml
ambient/src/: main.rs
app_native/: Cargo.toml
app_native/examples/: app.rs
app_native/src/: lib.rs
camera_hub/: Cargo.toml
camera_hub/src/: config.rs  delivery_monitor.rs  livestream.rs  main.rs  motion.rs  notification_target.rs  pairing.rs
client_lib/: Cargo.toml
client_lib/src/: config.rs  http_client.rs  identity.rs  lib.rs  mls_client.rs  pairing.rs  tests.rs  video.rs
client_server_lib/: Cargo.toml
client_server_lib/src/: auth.rs  lib.rs
config_tool/: Cargo.toml
config_tool/src/: main.rs
deploy/: package-lock.json  package.json
deploy/src-tauri/: Cargo.toml  tauri.conf.json
deploy/src-tauri/icons/: icon.icns
deploy/src-tauri/src/: lib.rs
deploy/src/lib/: api.ts  demoDisplay.ts
deploy/src/routes/: +layout.svelte  +page.svelte
motion_ai/cli/: Cargo.toml
motion_ai/pipeline/: Cargo.toml
motion_ai/pipeline/src/: lib.rs
releases/: Dockerfile.deploy  README.md
releases/lib/: compare.bash  rust_pipeline.bash
reset/: Cargo.toml
scripts/: check_openmls_versions.py
server/: Cargo.toml
server/src/: main.rs  security.rs  unifiedpush.rs
server_backbone/: Cargo.toml
temperature/: Cargo.toml
temperature/src/: main.rs
tester/: Cargo.toml
toggle/src/: main.rs
update/: Cargo.toml
update/src/: lib.rs  main.rs
(+21 files in other folders)
