[package]
name = "secluso-app-native"
version = "1.0.0"
edition = "2021"
authors = ["Ardalan Amiri Sani <arrdalan@gmail.com>"]

[dependencies]
secluso-client-lib = { path = "../client_lib" }
secluso-client-server-lib = { path = "../client_server_lib" }
bincode = "1.3.3"
rand="0.8"
lazy_static = "1.5"
serde_json="1.0.149"
log = { version="0.4.29", features=["kv"] }
anyhow = "1.0.102"
flutter_rust_bridge = "=2.11.1"
serde = "1.0"
serde_derive = "1.0"
openmls = { git = "https://github.com/openmls/openmls", rev = "openmls-v0.8.1" }
docopt = "~1.1"

[features]
default = []
for-example = ["secluso-client-lib/http_client"]

[[example]]
name = "app"
path = "examples/app.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
